/* 
  Localizable.strings
  desafio-ios

  Created by Douglas Amorim on 23/07/23.
  
*/

"UNKNOWN" = "Unknown";
"DETAIL_STATUS" = "Character Status: %@";
"DETAIL_SPECIES" = "Character Specie: %@";
"DETAIL_TYPE" = "Character Type: %@";
"DETAIL_GENDER" = "Character Gender: %@";
"DETAIL_ORIGIN" = "Character Origin: %@";
"DETAIL_LOCATION" = "Character Location: %@";
"CHARACTER_TITLE" = "Characters";
"FILTER" = "Filter";
"TEXT_FIELD_FILTER_NAME" = "Name";
"FILTER_BUTTON" = "FILTER";
"CHARACTER_FILTER_TITLE" = "Filter";
"CHARACTER_DETAIL_TITLE" = "Detail";
"CANCEL" = "Cancel";
