...
        
        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.autocorrectionType = .no
        textField.addDoneButtonOnKeyboard()
        textField.delegate = self
        
        textField.accessibilityIdentifier = "NAME_TEXT_FIELD"
        
        return textField
    }()
    
    private let underlineView: UIView = {
        let view = UIView()
...
